--- a/2033-002.html
+++ b/2033-002.html
@@ -78,7 +78,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:广东省：顺源达建材--沙太北路--沙太收费站--沙太立交--S8广佛肇高速--萝岗立交--G4京港澳高速--S14汕湛高速--石岭立交--G45大广高速--永兴立交--G0422武深高速--粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界--G0422武深高速--田庄收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材--沙太北路--沙太收费站--沙太立交--S8广佛肇高速--萝岗立交--G4京港澳高速--S14汕湛高速--石岭立交--G45大广高速--永兴立交--G0422武深高速--粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界--G0422武深高速--田庄收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
