--- a/002.html
+++ b/002.html
@@ -77,7 +77,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">超限运输许可证号：</div>
                     <div class="detail-value " id="reqNo">A4400002023042600342</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">有效范围：</div>
-				<div class="detail-value " id="passDists">河北省，湖南省</div></li>
+				<div class="detail-value " id="passDists">福建省，湖南省</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行时间：</div>
                     <div class="detail-value " id="passDate">2023年04月26日 12时04分至 2023年05月15日 23时59分</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
