--- a/002.html
+++ b/002.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材--S252--鱼湾收费站--G4京港澳高速--G6011南韶高速--丹霞立交--G0422武深高速--粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界--G0422武深高速--田庄收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材--S252--东华收费站--G78汕昆高速--英华立交--G4京港澳高速--马坝立交--G6011南韶高速--丹霞立交--G0422武深高速--粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界--G0422武深高速--田庄收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
