--- a/001.html
+++ b/001.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材--G228仙俺收费站--G15沈海高速--G15沈海高速--粤闽界<br><hr><span id="pro">福建省</span>:闽粤界--G15沈海高速--东山岛互通--诏安四都收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材--G228--仙俺收费站--G15沈海高速--G15沈海高速--粤闽界<br><hr><span id="pro">福建省</span>:闽粤界--G15沈海高速--东山岛互通--诏安四都收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
