--- a/004.html
+++ b/004.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材---鹤洲北收费站---S47广佛江珠高速---G94珠三角环线高速---张洞立交---G55二广高速---粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界--G55二广高速--宁远收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材---鹤洲北收费站---S47广佛江珠高速---G94珠三角环线高速---张洞立交---G55二广高速---粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界---G55二广高速---宁远收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
