--- a/004.html
+++ b/004.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材---G325---阳江收费站---G15沈海高速---S51肇阳高速---S14汕湛高速---G55二广高速---粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界---G55二广高速---宁远收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">广东省</span>:顺源达建材---G325---东城收费站---S32西部沿海高速---G15沈海高速---S51肇阳高速---S14汕湛高速---G55二广高速---粤湘界<br><hr><span id="pro">湖南省</span>:湘粤界---G55二广高速---宁远收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
