--- a/sn005.html
+++ b/sn005.html
@@ -265,7 +265,7 @@
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>  新丰村---观光路---G94珠三角环线高速---观澜收费站---G94珠三角环线高速---G35济广高速---常平收费站---新城大道---环常南路---东莞市苏为高分子材料有限公司（往返运输） 
+                        <br> 新丰村---G107---黄埔收费站---S3广深沿江高速---G1508广州绕城高速---长平收费站---苏为高分子材料有限公司（往返运输） 
                     </div>
                     
                 </li>
@@ -286,7 +286,7 @@
                 </li>
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">67.45吨</div>
+                    <div class="detail-value " id="cargoWeight">31.70吨</div>
                 </li>
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -322,7 +322,7 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车货总体信息</li> <!-- 车货总体信息 -->
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">84.00吨</div>
+                    <div class="detail-value " id="totalWeight">49.00吨</div>
                 </li>
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
@@ -330,7 +330,7 @@
                 </li>
                 <li class="ui-li-static ui-body-inherit ui-last-child">
                     <div class="detail-name detail-name-blod">轴荷分布：</div>
-                    <div class="detail-value " id="axlesLoad">10+20+3*18</div>
+                    <div class="detail-value " id="axlesLoad">10+20+30</div>
                 </li>
             </ul>
         </div>
