--- a/sn004.html
+++ b/sn004.html
@@ -265,7 +265,7 @@
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>  新丰村---G324---池尾收费站---S17揭普惠高速---S14汕湛高速---G1523甬莞高速---常平收费站---新城大道---环常南路---东莞市苏为高分子材料有限公司（往返运输） 
+                        <br>  新丰村---庆搓路---庆丰收费站---G4021许广高速---朝阳立交---S8广佛肇高速---G35济广高速------G1523甬莞高速---常平收费站---新城大道---环常南路---东莞市苏为高分子材料有限公司（往返运输） 
                     </div>
                     
                 </li>
