--- a/sn001.html
+++ b/sn001.html
@@ -265,7 +265,7 @@
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br>  新丰村---盐龙大道---高桥收费站---S20外环高速---S29从莞深高速---G1523甬莞高速---常平收费站---新城大道---环常南路---东莞市苏为高分子材料有限公司（往返运输） 
+                        <br>  新丰村---S379---石头收费站---G94珠三角环线高速---G1523甬莞高速---常平收费站---新城大道---环常南路---东莞市苏为高分子材料有限公司（往返运输） 
                     </div>
                     
                 </li>
