--- a/sn005.html
+++ b/sn005.html
@@ -265,7 +265,7 @@
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">通行路线：</div>
                     <div class="detail-value " id="roads">
-                        <br> 新丰村---G107---黄埔收费站---S3广深沿江高速---G1508广州绕城高速---长平收费站---苏为高分子材料有限公司（往返运输） 
+                        <br> 三水公路养护中心---G240---唐家收费站---G55二广高速---G15沈海高速---丹灶收费站---桂丹西路---苏为高分子材料有限公司（往返运输） 
                     </div>
                     
                 </li>
