--- a/sn005.html
+++ b/sn005.html
@@ -282,11 +282,11 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">货物信息</li> <!-- 货物信息 -->
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">货物名称：</div>
-                    <div class="detail-value " id="cargoInfo">推土机</div>
+                    <div class="detail-value " id="cargoInfo">挖机</div>
                 </li>
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">31.70吨</div>
+                    <div class="detail-value " id="cargoWeight">66.30吨</div>
                 </li>
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -322,7 +322,7 @@
                 <li data-role="list-divider" class="category-title ui-li-divider ui-bar-a" role="heading">车货总体信息</li> <!-- 车货总体信息 -->
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">49.00吨</div>
+                    <div class="detail-value " id="totalWeight">84.00吨</div>
                 </li>
                 <li class="ui-li-static ui-body-inherit">
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
