--- a/005.html
+++ b/005.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">多次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">湖北省</span>:顺源达建材---S315---大冶收费站---G45大广高速---大冶互通---S78蕲嘉高速—红旗岗枢纽---G50沪渝高速---鄂皖界；<br><hr><span id="pro">安徽省</span>: 皖鄂界---G50沪渝高速---G4212合安高速---吕亭枢纽---G0321德上高速---孔城收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">湖北省</span>:顺源达建材---G106---大冶东收费站---S78蕲嘉高速—红旗岗枢纽---G50沪渝高速---鄂皖界；<br><hr><span id="pro">安徽省</span>: 皖鄂界---G50沪渝高速---G4212合安高速---吕亭枢纽---G0321德上高速---孔城收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
