--- a/a001.html
+++ b/a001.html
@@ -53,7 +53,7 @@
                 <li data-role="list-divider" class="category-title">基本信息</li> <!-- 基本信息 -->
                 <li>
                     <div class="detail-name detail-name-blod ">超限运输许可证号：</div>
-                    <div class="detail-value " id="reqNo">B4200002023080300069</div>
+                    <div class="detail-value " id="reqNo">B4200002023080500069</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">有效范围：</div>
@@ -61,7 +61,7 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行日期：</div>
-                    <div class="detail-value " id="passDate">2023-08-03至2023-08-06</div>
+                    <div class="detail-value " id="passDate">2023-08-05至2023-08-31</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行次数：</div>
@@ -89,7 +89,7 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物重量：</div>
-                    <div class="detail-value " id="cargoWeight">35.00吨</div>
+                    <div class="detail-value " id="cargoWeight">43.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">货物外廓尺寸(米)：</div>
@@ -99,7 +99,7 @@
                 <li data-role="list-divider" class="category-title">车辆信息</li> <!-- 车辆信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">牵引车车号牌：</div>
-                    <div class="detail-value" id="vehicleNo">冀EX2212</div>
+                    <div class="detail-value" id="vehicleNo">冀E12345</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车厂牌型号：</div>
@@ -107,11 +107,11 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">牵引车整备质量：</div>
-                    <div class="detail-value" id="vehWeight">15.00吨</div>
+                    <div class="detail-value" id="vehWeight">8.80吨</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车车号牌：</div>
-                    <div class="detail-value" id="hanvehicleNo">冀E12GU挂</div>
+                    <div class="detail-value" id="hanvehicleNo">冀E12345挂</div>
                 </li>
                 <li class="han-veh">
                     <div class="detail-name detail-name-blod">挂车厂牌型号：</div>
@@ -125,7 +125,7 @@
                 <li data-role="list-divider" class="category-title">车货总体信息</li> <!-- 车货总体信息 -->
                 <li>
                     <div class="detail-name detail-name-blod">车货总重量：</div>
-                    <div class="detail-value " id="totalWeight">50.00吨</div>
+                    <div class="detail-value " id="totalWeight">60.00吨</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">车货外廓尺寸(米)：</div>
@@ -133,7 +133,7 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">轴荷分布：</div>
-                    <div class="detail-value " id="axlesLoad">10+20+20</div>
+                    <div class="detail-value " id="axlesLoad">10+20+30</div>
                 </li>
             </ul>
         </div>
