--- a/a002.html
+++ b/a002.html
@@ -57,7 +57,7 @@
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod">有效范围：</div>
-                    <div class="detail-value " id="passDists">湖北省</div>
+                    <div class="detail-value " id="passDists">湖北省我的</div>
                 </li>
                 <li>
                     <div class="detail-name detail-name-blod ">通行日期：</div>
