--- a/005.html
+++ b/005.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">山东省</span>:博远建材—西宁路---烟台机场收费站---S7402烟台西港区疏港高速---G18荣乌 高速---S17蓬栖高速---G15沈海高速（烟台市 青岛市 日照市）---鲁苏界；<br><hr><span id="pro">江苏省</span>: 苏鲁界--- G15沈海高速---赣榆收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">山东省</span>:博远建材—西宁路---烟台机场收费站---G18荣乌高速---S17蓬栖高速---G15沈海高速（烟台市 青岛市 日照市）---鲁苏界；<br><hr><span id="pro">江苏省</span>: 苏鲁界--- G15沈海高速---赣榆收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
