--- a/006.html
+++ b/006.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">浙江省</span>:博远建材—G106---潘桥收费站---S10温州绕城高速---G15沈海高速---浙闽界；<br><hr><span id="pro">福建省</span>:闽浙界---G15沈海高速---福鼎收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">浙江省</span>:博远建材---G106---潘桥收费站---S10温州绕城高速---G15沈海高速---浙闽界；<br><hr><span id="pro">福建省</span>:闽浙界---G15沈海高速---福鼎收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
