--- a/007.html
+++ b/007.html
@@ -83,7 +83,7 @@
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod ">通行次数：</div>
                     <div class="detail-value " id="passCount">单次</div></li>    
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">通行路线：</div>
-				<div class="detail-value " id="roads"><br><span id="pro">安徽省</span>:博远建材---方兴大道---方兴大道收费站---G3京台高速---G4001合肥绕城高速---G40沪陕高速---皖豫界；<br><hr><span id="pro">河南省</span>: 豫皖界--- G40沪陕高速---信阳收费站<br><hr></div></li>
+				<div class="detail-value " id="roads"><br><span id="pro">安徽省</span>:博远建材---金寨南路---金寨路收费站---G4001合肥绕城高速---G40沪陕高速---皖豫界；<br><hr><span id="pro">河南省</span>: 豫皖界--- G40沪陕高速---信阳收费站<br><hr></div></li>
                     <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">承运单位：</div>
                     <div class="detail-value " id="certName">乔金友</div></li>
                 <li class="ui-li-static ui-body-inherit"><div class="detail-name detail-name-blod">经营许可证号：</div>
